--- a/index.html
+++ b/index.html
@@ -577,6 +577,10 @@
           </div>
         </div>
       </div>
+
+      <div class="footer">
+        <div class="footer-content"><p>Made with <i class="fa fa-heart" style="color: red;"></i> by James Bond</p></div>
+      </div>
     </div>
   </body>
 </html>
